Fixed hover buttons on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,15 @@ svg:hover {
   cursor: pointer;
 }
 
+@media screen {
+  svg:active {
+    fill: rgb(117, 117, 117);
+  }
+  svg:hover {
+    fill: white;
+  }
+}
+
 /* #pauseDesktop {
   height: 20px;
   width: 20px;
